--- a/_posts/2016-01-18-ansible%E5%85%A5%E9%97%A8.md
+++ b/_posts/2016-01-18-ansible%E5%85%A5%E9%97%A8.md
@@ -7,6 +7,8 @@ subtitle: 简要介绍ansible
 # 概述
 **AUTOMATION FOR EVERYONE**,这是官方对Ansbile的定位。看字面意思应该很明确了，它就是为了完成系统各种自动化而服务。用它部署应用、管理各类系统，帮助运维人员简化很多复杂场景，提高工作效率。Ansible有收费版和开源版本，我一直用开源的，能满足现在的需求。用ansbile也没几个月，之前用puppet,salt，不能说都比这些好，但ansible的优点还是很多的，不然也不至于redhat会收购吧。
 
+<!--more-->
+
 # 进入正题
 
 ## 使用场景
