--- a/_posts/2016-01-18-ansible%E5%85%A5%E9%97%A8.md
+++ b/_posts/2016-01-18-ansible%E5%85%A5%E9%97%A8.md
@@ -14,7 +14,7 @@ subtitle: 简要介绍ansible
 ## 使用场景
 
 * 配置管理。从系统初始化完成到正式上线，我们会将指定机器角色定义好，比如是proxy(负载均衡)还是web服务器，这不限于是单台机器或多台机器。单台机器可以承担多个角色，比如我们将dns角色和web服务器角色共同应用于某台机器，以达到机器复用的目的。
-* 实时执行命令。Ansible有好多模块支持命令行操作，比如copy,shell等。
+* 实时执行命令-Ad hoc。Ansible有好多模块支持命令行操作，比如copy,shell等。
 
 ## 优点
 
